--- a/common_services/transformation/src/main/resources/transformation.properties
+++ b/common_services/transformation/src/main/resources/transformation.properties
@@ -4,3 +4,8 @@ escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
 # CoNE service URL
 escidoc.cone.service.url=${escidoc.cone.service.url}
+
+# Stylesheet locations
+
+escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
+escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
