--- a/performanceTest/pom.xml
+++ b/performanceTest/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.39-SNAPSHOT</version>
+			<version>1.0.47-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -74,6 +74,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.1</version>
 			<scope>compile</scope>
+		</dependency>
+        <dependency>
+		    <groupId>commons-httpclient</groupId>
+		    <artifactId>commons-httpclient</artifactId>
+		    <version>3.1</version>
 		</dependency>
 	</dependencies>
 </project>
