--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -156,6 +156,13 @@
                             </includeInApplicationXml>
                         </jarModule>
                         <jarModule>
+                            <groupId>commons-httpclient</groupId>
+                            <artifactId>commons-httpclient</artifactId>
+                            <includeInApplicationXml>
+                                true
+                            </includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
                             <groupId>commons-discovery</groupId>
                             <artifactId>commons-discovery</artifactId>
                             <includeInApplicationXml>
@@ -619,6 +626,12 @@
             <version>1.7.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.0.1</version>
+			<scope>compile</scope>
+		</dependency>
         <dependency>
             <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
