--- a/common_services/cone_presentation/src/test/resources/pubman.properties
+++ b/common_services/cone_presentation/src/test/resources/pubman.properties
@@ -106,3 +106,5 @@ escidoc.cone.rdf.path=${escidoc.cone.rdf.path}
 
 #Path to the model.xml file
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
+
+escidoc.cone.mimetype.pattern=${escidoc.cone.mimetype.pattern}
