CoNE content negotiation

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -127,6 +127,9 @@ escidoc.unapi.view.server=${escidoc.unapi.view.server}
 # CoNE default language abbreviation
 escidoc.cone.language.default=${escidoc.cone.language.default}
 
+# CoNE mime type pattern for content negotiation
+escidoc.cone.mimetype.pattern=${escidoc.cone.mimetype.pattern}
+
 # CoNE service URL
 escidoc.cone.service.url=${escidoc.cone.service.url}
 
