--- a/common_services/common_logic_ear/src/test/resources/pubman.properties
+++ b/common_services/common_logic_ear/src/test/resources/pubman.properties
@@ -2,6 +2,9 @@
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
 
+# URL of the FIZ framework login
+escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
+
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
 
