--- a/common_services/foxml_migration/pom.xml
+++ b/common_services/foxml_migration/pom.xml
@@ -163,5 +163,10 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
 		</dependency>  
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>framework_access</artifactId>
+			<version>1.0.44-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
