1) solution.properties moved to .. 2) + TestIndicies

--- a/common_services/search_ear/pom.xml
+++ b/common_services/search_ear/pom.xml
@@ -162,6 +162,11 @@
 								true
 							</includeInApplicationXml>
 						</jarModule>
+						<jarModule>
+                            <groupId>com.maxmind.geoip</groupId>
+                            <artifactId>geoip</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>						
 					</modules>
 				</configuration>
 			</plugin>
