--- a/common_services/dataacquisition/pom.xml
+++ b/common_services/dataacquisition/pom.xml
@@ -78,7 +78,7 @@
 					<includes>
 						<include>**/DataAcquisitionUnitTest.java</include>
 						<include>**/DataSourceHandlerTest.java</include>
-						<include>**/UnapiTest.java</include>
+<!--						<include>**/UnapiTest.java</include>-->
 					</includes>
 				</configuration>
 			</plugin>
