--- a/common_services/dataacquisition_ear/src/main/resources/common.properties
+++ b/common_services/dataacquisition_ear/src/main/resources/common.properties
@@ -1,17 +1,6 @@
-# URL of the FIZ framework instance
-escidoc.framework_access.framework.url=${escidoc.common.framework.url}
+# CoNE service URL
+escidoc.cone.service.url=${escidoc.cone.service.url}
+#escidoc.cone.service.url=http://dev-pubman.mpdl.mpg.de/cone/
 
-# Identifier of the content type "publication" in the actual framework instance
-escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
-
-# RE Pattern for retrieving determinators from item xml
-escidoc.content.model.pattern=${escidoc.content.model.pattern}
-escidoc.context.pattern=${escidoc.context.pattern}
-
-# Used for validation initialization
-framework.admin.username=${framework.admin.username}
-framework.admin.password=${framework.admin.password}
-
-# db settings
-db.superuser.login=${db.superuser.login}
-db.superuser.password=${db.superuser.password}
+escidoc.dataacquisition.service.url=${escidoc.dataacquisition.service.url}
+#escidoc.dataacquisition.service.url=http://dev-pubman.mpdl.mpg.de/dataacquisition/
