--- a/common_services/dataacquisition_ear/src/main/resources/common.properties
+++ b/common_services/dataacquisition_ear/src/main/resources/common.properties
@@ -4,3 +4,38 @@ escidoc.cone.service.url=${escidoc.cone.service.url}
 
 escidoc.dataacquisition.service.url=${escidoc.dataacquisition.service.url}
 #escidoc.dataacquisition.service.url=http://dev-pubman.mpdl.mpg.de/dataacquisition/
+
+#Path to the model.xml file
+escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
+
+# COntrol of Named Entities database interface class
+escidoc.cone.querier.class=de.mpg.escidoc.services.cone.SQLQuerier
+
+# CoNE database configuration
+escidoc.cone.database.driver.class=${escidoc.cone.database.driver.class}
+escidoc.cone.database.server.name=${escidoc.cone.database.server.name}
+escidoc.cone.database.server.port=${escidoc.cone.database.server.port}
+escidoc.cone.database.name=${escidoc.cone.database.name}
+escidoc.cone.database.user.name=${escidoc.cone.database.user.name}
+escidoc.cone.database.user.password=${escidoc.cone.database.user.password}
+
+# Mulgara server name
+escidoc.cone.mulgara.server.name=${escidoc.cone.mulgara.server.name}
+
+# Mulgara server port
+escidoc.cone.mulgara.server.port=${escidoc.cone.mulgara.server.port}
+
+# CoNE default language abbreviation
+escidoc.cone.language.default=${escidoc.cone.language.default}
+
+#CoNE Maximum number of returned result sets
+escidoc.cone.maximum.results=${escidoc.cone.maximum.results}
+
+# CoNE default language abbreviation
+escidoc.cone.rdf.path=${escidoc.cone.rdf.path}
+
+#Path to the model.xml file
+escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
+
+escidoc.cone.mimetype.pattern=${escidoc.cone.mimetype.pattern}
+
