--- a/common_services/dataacquisition_ear/pom.xml
+++ b/common_services/dataacquisition_ear/pom.xml
@@ -108,6 +108,11 @@
 							<artifactId>dataacquisition_presentation</artifactId>
 							<contextRoot>/dataacquisition</contextRoot>
 						</webModule>
+                        <webModule>
+                            <groupId>de.mpg.escidoc.services</groupId>
+                            <artifactId>cone_presentation</artifactId>
+                            <contextRoot>/cone</contextRoot>
+                        </webModule>
 						<jarModule>
 							<groupId>xmlbeans</groupId>
 							<artifactId>xbean</artifactId>
@@ -128,6 +133,26 @@
 							<artifactId>geoip</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>						
+						<jarModule>
+							<groupId>external</groupId>
+							<artifactId>scannotation</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
+							<groupId>postgresql</groupId>
+							<artifactId>postgresql</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
+							<groupId>de.mpg.escidoc.services</groupId>
+							<artifactId>structuredexportmanager</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
+							<groupId>de.mpg.escidoc.services</groupId>
+							<artifactId>cone</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
 					</modules>
 				</configuration>
 			</plugin>
@@ -257,6 +282,8 @@
 										<!-- copy over the jboss service descriptor -->
 										<copy overwrite="true" file="${project.build.directory}/classes/jboss-service.xml" todir="${project.build.directory}/jboss/server/conf" />
 										<!-- copy the configuration file -->
+										<copy overwrite="true" file="${project.build.directory}/classes/solution.properties" todir="${project.build.directory}/jboss/server/conf" />
+										<!-- copy the configuration file -->
 										<copy overwrite="true" file="${project.build.directory}/classes/common.properties" todir="${project.build.directory}/jboss/server/conf" />
 									</tasks>
 								</configuration>
@@ -368,5 +395,37 @@
 			<version>2.4.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>external</groupId>
+			<artifactId>scannotation</artifactId>
+			<version>1.0.2</version>
+      		<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>structuredexportmanager</artifactId>
+			<version>1.0.47-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>cone_presentation</artifactId>
+			<version>1.2.3-SNAPSHOT</version>
+			<scope>compile</scope>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>cone</artifactId>
+			<version>1.2.3-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>8.3-604.jdbc3</version>
+			<scope>compile</scope>
+		</dependency>
+		
 	</dependencies>
 </project>
