--- a/common_services/dataacquisition_ear/src/main/resources/common.properties
+++ b/common_services/dataacquisition_ear/src/main/resources/common.properties
@@ -9,7 +9,7 @@ escidoc.dataacquisition.service.url=${escidoc.dataacquisition.service.url}
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
 
 # COntrol of Named Entities database interface class
-escidoc.cone.querier.class=de.mpg.escidoc.services.cone.SQLQuerier
+escidoc.cone.querier.class=${escidoc.cone.querier.class}
 
 # CoNE database configuration
 escidoc.cone.database.driver.class=${escidoc.cone.database.driver.class}
