--- a/common_services/cone/pom.xml
+++ b/common_services/cone/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.44</version>
+		<version>1.0.45-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>cone</artifactId>
 	<name>cone</name>
 	<packaging>jar</packaging>
-	<version>1.2.3</version>
+	<version>1.2.4-SNAPSHOT</version>
 	
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.44</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.44</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.44</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/cone</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/cone</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/</url>
 	</scm>
 	
 	<build>
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.44</version>
+			<version>1.1.45-SNAPSHOT</version>
 			<type>ejb</type>
 			<scope>provided</scope>
 		</dependency>
