New snapshot versions
Former-commit-id: 5ea6fee6aafc8f6ec84550fdcaaf1bea3d79e932

--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -210,13 +210,13 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>validation_presentation</artifactId>
-            <version>1.0.50</version>
+            <version>1.0.51-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.47</version>
+            <version>1.0.48-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -239,13 +239,13 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>cone</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.4-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.44</version>
+			<version>1.1.45-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 
