path to explain moved to the common_services/pom.xml

--- a/common_services/syndication_presentation/src/test/resources/pubman.properties
+++ b/common_services/syndication_presentation/src/test/resources/pubman.properties
@@ -11,3 +11,6 @@ escidoc.pubman.instance.url=${escidoc.pubman.instance.url}
 framework.admin.username=${framework.admin.username}
 framework.admin.password=${framework.admin.password}
 
+escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
+
+
