new props: escidoc.search.and.export.start.record escidoc.search.and.export.maximum.records
searchANDexport limit/offset are defined via them


Former-commit-id: 09ffdfdf0b015c677b8665a3902f27a94290b5f7

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -141,6 +141,10 @@ escidoc.cone.database.name=${escidoc.cone.database.name}
 escidoc.cone.database.user.name=${escidoc.cone.database.user.name}
 escidoc.cone.database.user.password=${escidoc.cone.database.user.password}
 
+# searchAndExport service 
+escidoc.search.and.export.start.record=${escidoc.search.and.export.start.record}
+escidoc.search.and.export.maximum.records=${escidoc.search.and.export.maximum.records}
+
 #Path to the model.xml file
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
 
