+ props escidoc.search.and.export.default.sql.query escidoc.search.and.export.indexes.explain.query escidoc.search.and.export.default.sort.keys escidoc.search.and.export.default.sort.order
Former-commit-id: 54d3da4ac5f7c43ecb81f794f62b9fb80b918aba

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -142,8 +142,15 @@ escidoc.cone.database.user.name=${escidoc.cone.database.user.name}
 escidoc.cone.database.user.password=${escidoc.cone.database.user.password}
 
 # searchAndExport service 
+escidoc.search.and.export.default.sql.query=${escidoc.search.and.export.default.sql.query}
+escidoc.search.and.export.indexes.explain.query=${escidoc.search.and.export.indexes.explain.query}
+escidoc.search.and.export.default.sort.keys=${escidoc.search.and.export.default.sort.keys}
+escidoc.search.and.export.default.sort.order=${escidoc.search.and.export.default.sort.order}
 escidoc.search.and.export.start.record=${escidoc.search.and.export.start.record}
 escidoc.search.and.export.maximum.records=${escidoc.search.and.export.maximum.records}
+
+
+
 
 #Path to the model.xml file
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
