framework_access version to 1.0.48-SNAPSHOT
Former-commit-id: aaf2c9af479ff868e3fd0bca5d0ec5445e9d3454

--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -456,7 +456,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.47</version>
+            <version>1.0.48-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
