Changed resource handling

--- a/common_services/syndication_ear/pom.xml
+++ b/common_services/syndication_ear/pom.xml
@@ -133,6 +133,11 @@
                             <artifactId>search_presentation</artifactId>
                             <contextRoot>/search</contextRoot>
                         </webModule>
+                        <jarModule>
+                            <groupId>com.maxmind.geoip</groupId>
+                            <artifactId>geoip</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
                     </modules>
                 </configuration>
             </plugin>
