--- a/common_services/syndication_ear/src/main/resources/pubman.properties
+++ b/common_services/syndication_ear/src/main/resources/pubman.properties
@@ -14,3 +14,5 @@ escidoc.framework_access.framework.url=${escidoc.common.framework.url}
 # Admin User credentials 
 framework.admin.username=${framework.admin.username}
 framework.admin.password=${framework.admin.password}
+
+escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
