Content model creation
Former-commit-id: 34289f7b47e43f83b572144352c718fcc7383c4c

--- a/pubman/pubman_installer/src/main/resources/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/pubman.properties
@@ -63,7 +63,7 @@ escidoc.framework_access.framework.url=
 escidoc.framework_access.login.url=
 
 # Identifier of the content type "publication" in the actual framework instance
-escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
+escidoc.framework_access.content-model.id.publication=
 
 
 # Due to a historical defect, QName was released with multiple 
