[maven-release-plugin] prepare for next development iteration

--- a/common_services/common_logic/pom.xml
+++ b/common_services/common_logic/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.45</version>
+		<version>1.0.46-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>common_logic</artifactId>
 	<packaging>ejb</packaging>
 	<name>common_logic</name>
-	<version>1.1.45</version>
+	<version>1.1.46-SNAPSHOT</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.45</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.45</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.45</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/common_logic</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/common_logic</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/</url>
 	</scm>
 
 	<build>
@@ -132,7 +132,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.48</version>
+			<version>1.0.49-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
