--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -2,19 +2,19 @@
     <parent>
         <artifactId>pubman</artifactId>
         <groupId>de.mpg.escidoc.pubman</groupId>
-        <version>6.1.6-SNAPSHOT</version>
+        <version>6.1.6</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.mpg.escidoc.pubman</groupId>
     <artifactId>pubman_ear</artifactId>
     <name>pubman_ear</name>
     <packaging>ear</packaging>
-    <version>6.1.6-SNAPSHOT</version>
+    <version>6.1.6</version>
 
     <scm>
-        <connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_ear</connection>
-        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_ear</developerConnection>
-        <url>https://zim02.gwdg.de/repos/common/</url>
+        <connection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-6.1.6/pubman_ear</connection>
+        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-6.1.6/pubman_ear</developerConnection>
+        <url>https://zim02.gwdg.de/repos/common/tags/pubman-6.1.6/pubman_ear</url>
     </scm>
 
     <build>
@@ -456,69 +456,69 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.48-SNAPSHOT</version>
+            <version>1.0.48</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>common_logic</artifactId>
-            <version>1.1.45-SNAPSHOT</version>
+            <version>1.1.45</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>citationmanager</artifactId>
-            <version>1.0.50-SNAPSHOT</version>
+            <version>1.0.50</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>dataacquisition</artifactId>
-            <version>1.0.42-SNAPSHOT</version>
+            <version>1.0.42</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>structuredexportmanager</artifactId>
-            <version>1.0.48-SNAPSHOT</version>
+            <version>1.0.48</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>validation</artifactId>
-            <version>1.0.51-SNAPSHOT</version>
+            <version>1.0.51</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>validation_presentation</artifactId>
-            <version>1.0.51-SNAPSHOT</version>
+            <version>1.0.51</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>cone_presentation</artifactId>
-            <version>1.2.4-SNAPSHOT</version>
+            <version>1.2.4</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>dataacquisition_presentation</artifactId>
-            <version>1.0.42-SNAPSHOT</version>
+            <version>1.0.42</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>transformation</artifactId>
-            <version>1.0.33-SNAPSHOT</version>
+            <version>1.0.33</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -531,56 +531,56 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>search</artifactId>
-            <version>1.0.45-SNAPSHOT</version>
+            <version>1.0.45</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>search_presentation</artifactId>
-            <version>1.0.45-SNAPSHOT</version>
+            <version>1.0.45</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>syndication_presentation</artifactId>
-            <version>1.0.29-SNAPSHOT</version>
+            <version>1.0.29</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.pubman</groupId>
             <artifactId>pubman_logic</artifactId>
-            <version>6.1.6-SNAPSHOT</version>
+            <version>6.1.6</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.pubman</groupId>
             <artifactId>pubman_presentation</artifactId>
-            <version>6.1.6-SNAPSHOT</version>
+            <version>6.1.6</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>sword_presentation</artifactId>
-            <version>1.0.24-SNAPSHOT</version>
+            <version>1.0.24</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>cone</artifactId>
-            <version>1.2.4-SNAPSHOT</version>
+            <version>1.2.4</version>
             <scope>compile</scope>
             <type>jar</type>
         </dependency>
         <dependency>
            <groupId>de.mpg.escidoc.services</groupId>
            <artifactId>pid_cache_presentation</artifactId>
-           <version>0.1.8-SNAPSHOT</version>
+           <version>0.1.8</version>
            <scope>compile</scope>
            <type>war</type>
        </dependency>
